--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
     "name": "Password Generator",
     "description": "Chrome extension to generate password",
     "version": "0.0.1",
-    "icons": {"128": "images/icon_128.png"},
+    "icons": {"128": "images/icon_new_128.png"},
     "browser_action": {
-        "default_icon": "images/icon_19.png",
+        "default_icon": "images/icon_new_19.png",
         "default_popup": "popup.html"
     },
     "permissions": ["activeTab"]
